--- a/Redtie_automation_2021/test-output/index.html
+++ b/Redtie_automation_2021/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Suite" class="navigator-link ">
-                    <span>C:\Users\ephron\eclipse-workspace\Redtie_automation_2021\testng.xml</span>
+                    <span>C:\Users\ephron\git\saravana-testing-environment\Redtie_automation_2021\testng.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -149,7 +149,7 @@
         </div> <!-- panel Suite -->
         <div panel-name="test-xml-Suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\ephron\eclipse-workspace\Redtie_automation_2021\testng.xml</span>
+            <span class="header-content">C:\Users\ephron\git\saravana-testing-environment\Redtie_automation_2021\testng.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -202,16 +202,16 @@ data.addRows(2);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'test1')
 data.setCell(0, 2, 'Positive.positive_test')
-data.setCell(0, 3, 7373);
+data.setCell(0, 3, 8484);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'test2')
 data.setCell(1, 2, 'Positive.positive_test')
-data.setCell(1, 3, 5501);
+data.setCell(1, 3, 5478);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 12 seconds</span>
+              <span class="suite-total-time">Total running time: 13 seconds</span>
               <div id="times-div-Suite">
               </div> <!-- times-div-Suite -->
             </div> <!-- times-div -->
@@ -244,31 +244,31 @@ return data;
               </div> <!-- configuration-suite before -->
               <div class="configuration-method before">
                 <span class="method-name">open_Browser</span>
-                <span class="method-start">22217 ms</span>
+                <span class="method-start">29923 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">test1</span>
-                <span class="method-start">22218 ms</span>
+                <span class="method-start">29924 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">Close_Browser</span>
-                <span class="method-start">29596 ms</span>
+                <span class="method-start">38412 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method before">
                 <span class="method-name">open_Browser</span>
-                <span class="method-start">29600 ms</span>
+                <span class="method-start">38414 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">test2</span>
-                <span class="method-start">29601 ms</span>
+                <span class="method-start">38415 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">Close_Browser</span>
-                <span class="method-start">35104 ms</span>
+                <span class="method-start">43895 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-suite after">
                 <span class="method-name">Flush_Report</span>
-                <span class="method-start">35129 ms</span>
+                <span class="method-start">43941 ms</span>
               </div> <!-- configuration-suite after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
